# fun-small-projects

./: CMakeLists.txt  README.md  giftwrap.cc  mandelbrot.cc  mandelbrot.ispc  my_diff.cc
